--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   web_scraper: ^0.0.6
+  flutter_spinkit: "^4.1.2"
+
 
 
 dev_dependencies:
