--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   web_scraper: ^0.0.6
-  flutter_spinkit: "^4.1.2"
+  flutter_spinkit: ^4.1.2
+  flutter_launcher_icons: ^0.8.1
+
 
 
 
@@ -31,7 +33,10 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-
+flutter_icons:
+  image_path: "assets/images/logo_fcm.png"
+  android: true
+  ios: trues
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -45,7 +50,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/images/logo_fcm.jpg
+    - assets/images/
   #  - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
